[workspace]
members = [
	"10001st_prime",
	"euler",
	"number_letter_counts",
	"even_fibo",
	"factorial_digit_sum",
	"one_thousand_digit_fibo_number",
	"highly_divisible_triangular_number",
	"pandigital_fibonacci_ends",
	"XOR_decryption",
	"investigating_the_primality_of_numbers_of_the_form_2n2-1",
	"pandigital_prime",
	"amicable_chains",
	"largest_palindrome_product",
	"amicable_numbers",
	"largest_prime_factor",
	"champernownes_constant",
	"largest_product_in_a_grid",
	"self_powers",
	"largest_product_in_a_series",
	"smallest_multiple",
	"coded_triangle_numbers",
	"lattice_paths",
	"special_pythagorean_triplet",
	"coin_sums",
	"lexicographic_permutations",
	"su_doku",
	"longuest_collatz_sequence",
	"sum_square_diff",
	"digit_factorials",
	"lychrel_numbers",
	"summation_of_primes",
	"digit_fifth_powers",
	"maximum_path_sum_I",
	"distinct_powers",
	"maximum_path_sum_II",
	"triangular_pentagonal_and_hexagonal",
	"double-base_palindromes",
	"multiple_3_5",
	"truncatable_primes",
	"names_scores",
	"non_abundant_sums",
	]
