[workspace]
members = [
	"euler",
	"problem_1",
	"problem_2",
	"problem_3",
	"problem_4",
	"problem_5",
	"problem_6",
	"problem_7",
	"problem_8",
	"problem_9",
	"problem_10",
	"problem_11",
	"problem_12",
	"problem_14",
	"problem_15",
	"problem_17",
	"problem_18",
	"problem_20",
	"problem_21",
	"problem_22",
	"problem_23",
	"problem_24",
	"problem_25",
	"problem_26",
	"problem_29",
	"problem_30",
	"problem_31",
	"problem_34",
	"problem_36",
	"problem_37",
	"problem_38",
	"problem_40",
	"problem_41",
	"problem_42",
	"problem_45",
	"problem_47",
	"problem_48",
	"problem_50",
	"problem_55",
	"problem_59",
	"problem_67",
	"problem_95",
	"problem_96",
	"problem_104",
	"problem_216",
]
