[package]
name = "XOR_decryption"
version = "0.1.0"
authors = ["irevoire <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
# at the time of writing this file the permutations features was not in itertools
# if this branch get deleted then we can hope by requiring only itertool it will works
itertools = { git = "https://github.com/tobz1000/rust-itertools", branch = "permutations" }
